syntax = "proto3";

option java_package = "dev.usbharu.owl.generated";

message UUID {
  uint64 most_significant_uuid_bits = 1;
  uint64 least_significant_uuid_bits = 2;
}